--- a/music.html
+++ b/music.html
@@ -221,7 +221,7 @@
         <img src="applemusic.svg" alt="Apple Music" style="width: 20px; height: 20px; margin-right: 10px;" />
         Apple Music
       </a>
-      <a href="https://music.youtube.com/watch?v=8l0f5Pdo17A" target="_blank" style="display: flex; align-items: center; color: white; text-decoration: none; margin-bottom: 10px;">
+      <a href="https://music.youtube.com/watch?v=wJNrG3_xHKw&si=raPkFqGpxlDAMEQM" target="_blank" style="display: flex; align-items: center; color: white; text-decoration: none; margin-bottom: 10px;">
         <img src="youtube.svg" alt="YouTube Music" style="width: 20px; height: 20px; margin-right: 10px;" />
         YouTube Music
       </a>
