--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Porch Couch - Old-time music from Toronto, Canada. Making patio furniture louder since 2023">
+<meta name="keywords" content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
+<meta name="author" content="Porch Couch">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Porch Couch</title>
   <style>
     body {
