--- a/music.html
+++ b/music.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <head>
+      <meta name="description" content="treat yourself to some Porch Couch tunes">
+<meta name="keywords" content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
+<meta name="author" content="Porch Couch">
+
       <header>
         <div class="header-left">
           <a href="index.html" class="brand-text">PORCH COUCH</a>
@@ -143,7 +147,7 @@
 </head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TOUR - Porch Couch</title>
+  <title>MUSIC - Porch Couch</title>
   <style>
     body {
       font-family: sans-serif;
