--- a/tour.html
+++ b/tour.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="Treat yourself to some Porch Couch gigs">
+<meta name="keywords" content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
+<meta name="author" content="Porch Couch">
     <header>
         <div class="header-left">
           <a href="#" onclick="openVideoModal()" class="logo-container">
@@ -304,6 +307,12 @@
         June 5 - Toronto, ON - 
         <a href="https://www.dromtaberna.com/events-9O8Cm" target="_blank" style="color: rgb(249, 249, 249); text-decoration: underline;">
           Drom Taberna
+        </a>
+        <br>
+        <br>
+        June 18 - Toronto, ON - 
+        <a href="https://www.instagram.com/thebellandbeacon/?hl=en" target="_blank" style="color: rgb(249, 249, 249); text-decoration: underline;">
+          The Bell and Beacon
         </a>
         <br>
         <br>
