--- a/who.html
+++ b/who.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="description" content="Treat yourself to some Porch Couch biographies">
+    <meta name="keywords" content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
+    <meta name="author" content="Porch Couch">
+  </head>
   <header>
     <div class="header-left">
       <a href="index.html" class="brand-text">PORCH COUCH</a>
@@ -16,7 +21,7 @@
         <a href="https://instagram.com/porchcouccccc" target="_blank">
           <img src="instagram.svg" alt="Instagram" />
         </a>
-        <a href="https://open.spotify.com/album/71x0AWkRakcaNLOt51SPoH?si=V4Sk56zNRLaV6tY5tFezFg" target="_blank">
+        <a href="https://open.spotify.com/track/5FdJ8bYH3E9E3Gs4lDcygV?si=c601f5aa4b124c59" target="_blank">
           <img src="spotify.svg" alt="Spotify" />
         </a>
         <a href="mailto:porchcoucholdtime@gmail.com">
