--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <head>
+    <meta name="description" content="Porch Couch - Old-time music from Toronto, Canada. Making patio furniture louder since 2023">
+<meta name="keywords" content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
+<meta name="author" content="Porch Couch">
     <header>
       <div class="header-left">
         <a href="index.html" class="brand-text">PORCH COUCH</a>
