--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Porch Couch - Old-time music from Toronto, Canada. Making patio furniture louder since 2023">
-<meta name="keywords" content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
-<meta name="author" content="Porch Couch">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Porch Couch - Old-time music from Toronto, Canada. Making patio furniture louder since 2023">
+  <meta name="keywords"
+    content="Porch Couch, Band, Music, Old-Time, Fiddle, Banjo, Jaron Freeman-Fox, Alan Mackie, Toronto, Canada, Appalachia, Folk, Freak, Couch, music, tour, merch, Spotify, Apple Music, YouTube Music">
+  <meta name="author" content="Porch Couch">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Porch Couch</title>
   <style>
     body {
@@ -18,12 +21,14 @@
     }
 
     .floating {
-  position: absolute;
-  transition: transform 0.3s;
-  cursor: pointer;
-  border: 4px solid rgb(96, 87, 135); /* You can change the color and thickness */
-  border-radius: 10px; /* Optional: Rounds the edges of the border */
-}
+      position: absolute;
+      transition: transform 0.3s;
+      cursor: pointer;
+      border: 4px solid rgb(96, 87, 135);
+      /* You can change the color and thickness */
+      border-radius: 10px;
+      /* Optional: Rounds the edges of the border */
+    }
 
 
     .overlay-text {
@@ -77,23 +82,31 @@
   <style>
     @keyframes expandAndCenter {
       0% {
-        transform: translate(0, 0) scale(1); /* Start at original position and size */
+        transform: translate(0, 0) scale(1);
+        /* Start at original position and size */
       }
+
       100% {
-        transform: translate(calc(50vw - 50%), calc(50vh - 50%)) scale(50); /* Move to center and expand */
+        transform: translate(calc(50vw - 50%), calc(50vh - 50%)) scale(50);
+        /* Move to center and expand */
       }
     }
-  
+
     .expanding {
-      animation: expandAndCenter 100s forwards; /* Expand and move to center over 5 seconds */
-      position: fixed; /* Ensure it stays in place while expanding */
+      animation: expandAndCenter 100s forwards;
+      /* Expand and move to center over 5 seconds */
+      position: fixed;
+      /* Ensure it stays in place while expanding */
       top: 0;
       left: 0;
-      transform-origin: center; /* Expand from the center */
-      z-index: 1000; /* Ensure it appears above all other elements */
+      transform-origin: center;
+      /* Expand from the center */
+      z-index: 1000;
+      /* Ensure it appears above all other elements */
     }
   </style>
 </head>
+
 <body>
   <div class="background-link" onclick="openVideo()"></div>
 
@@ -116,41 +129,45 @@
     <span class="close-video" onclick="closeVideo()">&times;</span>
     <iframe id="videoFrame" src="" frameborder="0" allowfullscreen allow="autoplay"></iframe>
   </div>
-  
+
   <div style="position: fixed; top: 10px; left: 10px; z-index: 30;">
-    <img id="toggleIcon" src="speaker.svg" alt="Speaker Icon" 
-         style="width: 40px; height: 40px; cursor: pointer; filter: invert(1);" 
-         onclick="toggleAudioAndSize()" />
+    <img id="toggleIcon" src="speaker.svg" alt="Speaker Icon"
+      style="width: 40px; height: 40px; cursor: pointer; filter: invert(1);" onclick="toggleAudioAndSize()" />
   </div>
-  
+
   <audio id="audioPlayer">
     <source src="Silver Lake.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   <script>
     let isSpeaker = true; // Track the current icon state
-  
+    let isExpanding = false; // Track whether the icon is expanding
+
     function toggleIcon() {
       const icon = document.getElementById('toggleIcon');
-      if (isSpeaker) {
-        icon.src = 'click.svg'; // Switch to click.svg
+      if (isExpanding) {
+        icon.src = 'couch.svg';
       } else {
-        icon.src = 'speaker.svg'; // Switch back to speaker.svg
+        if (isSpeaker) {
+          icon.src = 'click.svg'; // Switch to click.svg
+        } else {
+          icon.src = 'speaker.svg'; // Switch back to speaker.svg
+        }
+        isSpeaker = !isSpeaker; // Toggle the state
       }
-      isSpeaker = !isSpeaker; // Toggle the state
     }
-  
+
     // Set an interval to toggle the icon every 500ms
     setInterval(toggleIcon, 500);
- 
-    let isExpanding = false; // Track whether the icon is expanding
-  
+
+
+
     function toggleAudioAndSize() {
       const icon = document.getElementById('toggleIcon');
-  
+
       // Toggle audio playback
       toggleAudio(); // Call the toggleAudio function
-  
+
       // Toggle the expanding effect
       if (isExpanding) {
         icon.classList.remove('expanding'); // Stop expanding
@@ -165,7 +182,7 @@
       }
       isExpanding = !isExpanding; // Toggle the state
     }
-  
+
     function toggleAudio() {
       const audioPlayer = document.getElementById('audioPlayer');
       if (audioPlayer.paused) {
@@ -177,7 +194,7 @@
   </script>
 
 
- 
+
 
   <script>
     function updateGifSizes() {
@@ -190,70 +207,70 @@
     }
 
     function initializeGifs() {
-  document.querySelectorAll('.gif-container').forEach((container) => {
-    const gif = container.querySelector('.floating');
-    const text = container.querySelector('.overlay-text');
+      document.querySelectorAll('.gif-container').forEach((container) => {
+        const gif = container.querySelector('.floating');
+        const text = container.querySelector('.overlay-text');
 
-    // Preload images
-    const originalSrc = gif.src;
-    const hoverSrc = gif.dataset.hover;
-    const preloadOriginal = new Image();
-    const preloadHover = new Image();
-    preloadOriginal.src = originalSrc;
-    preloadHover.src = hoverSrc;
+        // Preload images
+        const originalSrc = gif.src;
+        const hoverSrc = gif.dataset.hover;
+        const preloadOriginal = new Image();
+        const preloadHover = new Image();
+        preloadOriginal.src = originalSrc;
+        preloadHover.src = hoverSrc;
 
-    let x = Math.random() * (window.innerWidth - gif.width);
-    let y = Math.random() * (window.innerHeight - gif.height);
-    let dx = (Math.random() - 0.5) * 2;
-    let dy = (Math.random() - 0.5) * 2;
-    let isPaused = false;
+        let x = Math.random() * (window.innerWidth - gif.width);
+        let y = Math.random() * (window.innerHeight - gif.height);
+        let dx = (Math.random() - 0.5) * 2;
+        let dy = (Math.random() - 0.5) * 2;
+        let isPaused = false;
 
-    function moveGif() {
-      if (!isPaused) {
-        x += dx;
-        y += dy;
+        function moveGif() {
+          if (!isPaused) {
+            x += dx;
+            y += dy;
 
-        if (x <= 0 || x + gif.width >= window.innerWidth) dx *= -1;
-        if (y <= 0 || y + gif.height >= window.innerHeight) dy *= -1;
+            if (x <= 0 || x + gif.width >= window.innerWidth) dx *= -1;
+            if (y <= 0 || y + gif.height >= window.innerHeight) dy *= -1;
 
-        gif.style.transform = `translate(${x}px, ${y}px)`;
-        text.style.transform = `translate(${x}px, ${y}px)`;
-      }
+            gif.style.transform = `translate(${x}px, ${y}px)`;
+            text.style.transform = `translate(${x}px, ${y}px)`;
+          }
 
-      requestAnimationFrame(moveGif);
+          requestAnimationFrame(moveGif);
+        }
+
+        moveGif();
+
+        gif.addEventListener('mouseover', function () {
+          gif.dataset.original = gif.src; // Save the original GIF source
+          gif.src = hoverSrc; // Change to the hover image
+          text.style.display = "block"; // Show the overlay text
+          isPaused = true; // Stop the movement
+          gif.style.zIndex = "10"; // Bring the GIF to the front
+          text.style.zIndex = "10"; // Bring the text to the front
+        });
+
+        gif.addEventListener('mouseout', function () {
+          setTimeout(() => {
+            gif.src = `${originalSrc}?t=${new Date().getTime()}`; // Force reload the original GIF
+            text.style.display = "none"; // Hide the overlay text
+            isPaused = false; // Resume the movement
+            gif.style.zIndex = "1"; // Reset the z-index of the GIF
+            text.style.zIndex = "1"; // Reset the z-index of the text
+          }, 100); // Add a slight delay to ensure proper reload
+        });
+
+        gif.addEventListener('click', function () {
+          window.location.href = gif.dataset.link;
+        });
+      });
     }
-
-    moveGif();
-
-    gif.addEventListener('mouseover', function () {
-      gif.dataset.original = gif.src; // Save the original GIF source
-      gif.src = hoverSrc; // Change to the hover image
-      text.style.display = "block"; // Show the overlay text
-      isPaused = true; // Stop the movement
-      gif.style.zIndex = "10"; // Bring the GIF to the front
-      text.style.zIndex = "10"; // Bring the text to the front
-    });
-
-    gif.addEventListener('mouseout', function () {
-      setTimeout(() => {
-        gif.src = `${originalSrc}?t=${new Date().getTime()}`; // Force reload the original GIF
-        text.style.display = "none"; // Hide the overlay text
-        isPaused = false; // Resume the movement
-        gif.style.zIndex = "1"; // Reset the z-index of the GIF
-        text.style.zIndex = "1"; // Reset the z-index of the text
-      }, 100); // Add a slight delay to ensure proper reload
-    });
-
-    gif.addEventListener('click', function () {
-      window.location.href = gif.dataset.link;
-    });
-  });
-}
 
     function openVideo() {
       document.getElementById("videoModal").style.display = "flex";
       document.getElementById("videoFrame").src =
-  "https://www.youtube.com/embed/j1AsH3Wigp0?autoplay=1&modestbranding=1&showinfo=0&rel=0&controls=1";
+        "https://www.youtube.com/embed/j1AsH3Wigp0?autoplay=1&modestbranding=1&showinfo=0&rel=0&controls=1";
 
     }
 
@@ -268,19 +285,20 @@
       initializeGifs();
     });
     // Close video on ESC key
-document.addEventListener('keydown', function (e) {
-  if (e.key === 'Escape') {
-    closeVideo();
-  }
-});
+    document.addEventListener('keydown', function (e) {
+      if (e.key === 'Escape') {
+        closeVideo();
+      }
+    });
 
-// Close video when clicking outside the iframe
-document.getElementById("videoModal").addEventListener("click", function (e) {
-  if (e.target === this) {
-    closeVideo();
-  }
-});
+    // Close video when clicking outside the iframe
+    document.getElementById("videoModal").addEventListener("click", function (e) {
+      if (e.target === this) {
+        closeVideo();
+      }
+    });
 
   </script>
 </body>
+
 </html>
