--- a/tour.html
+++ b/tour.html
@@ -351,12 +351,22 @@
     </div>
   </div>
   <div class="text-container">
-    <p style="font-size: 24px; text-align: center; margin-right: 20px;">
-      June 5 - Toronto, ON -
+    <p style="font-size: 24px; text-align: left; margin-right: 20px;">
+      2025
+      <br> 
+      <br> 
+      Jun 5 - Toronto, ON -
       <a href="https://www.dromtaberna.com/events-9O8Cm" target="_blank"
         style="color: rgb(249, 249, 249); text-decoration: underline;">
         Drom Taberna
       </a>
+      <br>
+      <br>
+      Oct 24-26 - Dorrigo, NSW AUS - 
+      <a href="https://www.dorrigofolkbluegrass.com.au/" target="_blank"
+      style="color: rgb(249, 249, 249); text-decoration: underline;">
+      Dorrigo Folk & Bluegrass Festival
+    </a>
       <br>
       <br>
       Summer tour dates coming soon!
